[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/text/Kenney Mini Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/titleScreen/settingsComps/FullScreenOption.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/titleScreen/settingsComps/SoundSetting.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/titleScreen/settingsComps/RealBackFromSettings.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/titleScreen/SettingsScreen.gd" type="Script" id=5]
[ext_resource path="res://src/titleScreen/settingsComps/MusicSetting.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/titleScreen/settingsComps/MouseSensitivitySetting.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/titleScreen/settingsComps/testButtonParent.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/titleScreen/settingsComps/ScreenShakeSetting.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="SettingsScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1280, 720 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="Control"]
margin_left = 40.363
margin_top = 31.9541
margin_right = 897.363
margin_bottom = 382.954
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Control"]
margin_right = 1214.0
margin_bottom = 662.0
rect_min_size = Vector2( 1000, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Control/ScrollContainer"]
margin_right = 1200.0
margin_bottom = 795.0
custom_constants/separation = 39
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Control/ScrollContainer/VBoxContainer"]
margin_right = 1200.0
margin_bottom = 80.0
rect_min_size = Vector2( 1200, 0 )
custom_fonts/font = SubResource( 1 )
text = "Settings"
autowrap = true

[node name="FullScreenOption" parent="Control/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 119.0
margin_right = 1200.0
margin_bottom = 169.0

[node name="SoundSetting" parent="Control/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 208.0
margin_right = 1200.0
margin_bottom = 258.0
rect_min_size = Vector2( 600, 50 )

[node name="MusicSetting" parent="Control/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 297.0
margin_right = 1200.0
margin_bottom = 347.0
rect_min_size = Vector2( 600, 50 )

[node name="MouseSensitivitySetting" parent="Control/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 386.0
margin_right = 1200.0
margin_bottom = 450.0

[node name="ScreenShakeSetting" parent="Control/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 489.0
margin_right = 1200.0
margin_bottom = 553.0

[node name="testButtonParent" parent="Control/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 592.0
margin_right = 1200.0
margin_bottom = 656.0

[node name="RealBackFromSettings" parent="Control/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 695.0
margin_right = 1200.0
margin_bottom = 795.0

[connection signal="pressed" from="Control/Control/ScrollContainer/VBoxContainer/testButtonParent/VBoxContainer/testButton" to="." method="_on_testButton_pressed"]
[connection signal="pressed" from="Control/Control/ScrollContainer/VBoxContainer/RealBackFromSettings/BackFromSettingsButton" to="." method="_on_BackFromSettingsButton_pressed"]

[editable path="Control/Control/ScrollContainer/VBoxContainer/testButtonParent"]
[editable path="Control/Control/ScrollContainer/VBoxContainer/RealBackFromSettings"]
